minor bug fixes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend-mentor-age-calculator-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/nathanielfischer/Age-Calculator_Frontend-Mentor",
+  "homepage": "https://nathanielfischer.github.io/Age-Calculator_Frontend-Mentor/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
